# zektra-ai-gateway

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml  setup.py
examples/: basic_query.py  multiple_services.py  wallet_integration.py
zektra/: __init__.py  cli.py  config.py  gateway.py  models.py
zektra/payment/: __init__.py  payment_handler.py  solana_payment.py  wallet.py
zektra/services/: __init__.py  anthropic_service.py  base.py  deepseek.py  openai_service.py
